# mor-reel-studio

./: .gitignore  .mcp.json  Cargo.toml  Dioxus.toml  README.md
.github/workflows/: release.yml
assets/icons/: morreel-studio-64.b64
packaging/: PKGBUILD  morreel-studio.desktop
packaging/android/: bundle-ffmpeg.sh
src/: app.android.css  app.css  bevel.rs  coords.rs  droid.rs  emoji.rs  engine.rs  giphy.rs  hub.rs  keyframe.rs  main.rs  model.rs  plugin.rs
