[package]
name = "morreel-studio"
version = "0.1.0"
edition = "2021"
description = "Portrait-only (9:16) video editor for phone reels — Dioxus UI over an ffmpeg engine"
license = "GPL-3.0-or-later"
repository = "https://github.com/MoribundMurdoch/mor-reel-studio"

[dependencies]
dioxus = { version = "0.7", features = ["desktop"] }
mor_rust_dioxus_ui_kit = { path = "../mor_rust_dioxus_ui_kit" }
rfd = "0.15"
# ponytail: dioxus-desktop already pulls image 0.25 — declaring it direct is free.
image = { version = "0.25", default-features = false, features = ["png"] }
tokio = { version = "1", features = ["process", "io-util", "time"] }
# ponytail: dioxus already pulls both — declaring them direct is free, and a
# project file is the one thing worth not hand-rolling a parser for.
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
